cart icon alignment issues fixed. Cart count alignment fixed

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8762,7 +8762,7 @@ select:valid+.form-control-placeholder {
     padding: 0;
     font-size: 18px;
     line-height: 20px;
-    margin-top: 20px;
+    margin-top: 5px;
   }
 
   .product-img-bg {
