--- a/public/css/new.css
+++ b/public/css/new.css
@@ -114,7 +114,7 @@ body {
 
 .navlist li {
     align-self: center;
-    padding: 0 0 0 40px;
+    padding: 0 0 0 10px;
     margin: 0;
 }
 
